# brainzbot

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  shell.nix
oauth/: Cargo.toml
oauth/src/: main.rs  oauth.rs
src/: api.rs  brainzbot.rs  main.rs
src/commands/: login.rs  mod.rs  tracks.rs
