[package]
name = "brainzbot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { version = "0.6.1", features = ["cache", "chrono"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }

[workspace]
resolver = "3"
members = ["oauth"]
