[package]
name = "brainzbot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = { version = "0.6.1", features = ["cache", "chrono"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[workspace]
resolver = "3"
members = ["oauth"]
