[package]
name = "oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }
rustls = { version = "0.23.36", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.6", features = [
  "compression-full",
  "decompression-full",
  "fs",
  "normalize-path",
  "trace",
  "cors",
  "set-header",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
